--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     position: relative;
+    touch-action: manipulation;
 }
 
 #gameContainer {
@@ -79,6 +80,7 @@ body {
     justify-content: center;
     width: 70px;
     height: 30px;
+    touch-action: manipulation;
 }
 
 @keyframes falling {
