--- a/src/styles.css
+++ b/src/styles.css
@@ -16,8 +16,9 @@ body {
     position: relative;
     margin-top: 10px;
     width: 350px;
-    height: 700px;
+    height: 400px;
     background-color: red;
+    touch-action: manipulation;
 }
 #gameScreen {
     position: relative;
@@ -45,9 +46,10 @@ body {
 }
 
 .character {
+    display: flex;
+    justify-content: center;
     width: 25px;
     height: 45px;
-    background-color: black;
     position: absolute;
     bottom: 0;
 }
@@ -63,9 +65,9 @@ body {
 
 .fallingObject {
     position: absolute;
-    width: 20px;
-    height: 20px;
-    background-color: black;
+    transform-origin: center center;
+    width: 22px;
+    height: 22px;
     animation: falling 2s steps(10, end) infinite;
 }
 
@@ -82,12 +84,25 @@ body {
     height: 30px;
     touch-action: manipulation;
 }
+#screenButContainer {
+    display: flex;
+}
+.screenButton {
+    background-color: rgba(0, 0, 0, 0%);
+    border-style: none;
+    width: 200px;
+    height: 200px;
+}
+
+.right {
+    transform: scaleX(-1);
+}
 
 @keyframes falling {
     0% {
         transform: translateY(0%);
     }
     100% {
-        transform: translateY(1100%);
+        transform: translateY(1050%);
     }
 }
