--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
+:root {
+    --containerWidth: 400px;
+    --containerHeight: calc(var(--containerWidth) - 110px);
+    --screenWidth: calc(var(--containerWidth) - 50px);
+    --screenHeight: calc(var(--containerHeight) - 50px);
+    --fragmentWidth: calc(var(--containerWidth) / 6);
+}
+
 body {
     margin: 0;
     width: 100%;
@@ -13,88 +21,56 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     position: relative;
-    margin-top: 10px;
-    width: 350px;
-    height: 400px;
+    width: var(--containerWidth);
+    height: var(--containerHeight);
     background-color: red;
-    touch-action: manipulation;
 }
-#gameScreen {
-    position: relative;
+#screenContainer {
     display: flex;
-    margin-top: 50px;
-    width: 300px;
-    height: 250px;
+    gap: 1px;
+    width: var(--screenWidth);
+    height: var(--screenHeight);
     background-color: gray;
 }
-.screenPart {
+
+.screenFragment {
     position: relative;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+    width: var(--fragmentWidth);
     height: 100%;
-    width: 33%;
-}
-#leftScreen {
-    background-color: rgb(170, 170, 170);
-}
-#middleScreen {
-    background-color: rgb(187, 187, 187);
-}
-#rightScreen {
-    background-color: rgb(134, 134, 134);
+    background-color: rgb(119, 119, 119);
 }
 
-.character {
-    display: flex;
-    justify-content: center;
-    width: 25px;
-    height: 45px;
+.player {
     position: absolute;
     bottom: 0;
+    width: 30px;
+    height: 45px;
 }
-#leftCharacter {
+
+.chef {
     display: none;
-}
-#middleCharacter {
-    display: none;
-}
-#rightCharacter {
-    display: none;
+    position: absolute;
+    top: 0;
+    margin-top: -40px;
+    height: 45px;
 }
 
 .fallingObject {
     position: absolute;
-    transform-origin: center center;
-    width: 22px;
-    height: 22px;
-    animation: falling 2s steps(10, end) infinite;
-}
-
-#gameButtons {
-    display: flex;
-    gap: 20px;
-    margin-top: 50px;
-}
-.moveButton {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 70px;
+    top: 0;
+    width: 20px;
     height: 30px;
-    touch-action: manipulation;
-}
-#screenButContainer {
-    display: flex;
-}
-.screenButton {
-    background-color: rgba(0, 0, 0, 0%);
-    border-style: none;
-    width: 200px;
-    height: 200px;
+
+    animation: falling 1.8s steps(10) infinite;
 }
 
-.right {
+.flip {
     transform: scaleX(-1);
 }
 
@@ -103,6 +79,6 @@ body {
         transform: translateY(0%);
     }
     100% {
-        transform: translateY(950%);
+        transform: translateY(610%);
     }
 }
