--- a/src/styles.css
+++ b/src/styles.css
@@ -92,6 +92,55 @@ body {
     background-color: rgb(70, 70, 70);
     margin-left: 5px;
 }
+#pizzaLogo {
+    display: none;
+    position: absolute;
+    top: 0;
+    margin-top: 10px;
+    height: 120px;
+    filter: opacity(20%);
+    transform: rotate(30deg);
+}
+.window {
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: rgb(70, 70, 70);
+}
+.windowInvisBorder {
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    border-style: solid;
+    border-width: 60px;
+    border-color: rgba(0, 0, 0, 30%);
+}
+#windowBorder1 {
+    top: 0;
+    left: 0;
+    margin-top: 23%;
+    margin-left: -6%;
+}
+#window1 {
+    top: 0;
+    left: 0;
+    margin-top: 39%;
+    margin-left: 10%;
+}
+#window2 {
+    top: 0;
+    right: 0;
+    margin-top: 39%;
+    margin-right: 10%;
+}
+#window3 {
+    top: 0;
+    margin-top: 10%;
+    width: 280px;
+    height: 70px;
+}
 
 .screenFragment {
     position: relative;
